Bug 553905 - data parser should parse up to a failure and not scrap the whole path. r=jwatt